fix: spacing

--- a/src/components/FlightDurationCard/FlightDurationCard.scss
+++ b/src/components/FlightDurationCard/FlightDurationCard.scss
@@ -8,6 +8,8 @@
   }
   &__title {
     font-size: 1.25rem;
+    margin: 0;
+    margin-bottom: 1rem;
   }
 
   &__button-container {
